fix: release GPU resources on real completion